--- a/force-app/main/default/aura/CTHealthAdmin/CTHealthAdmin.cmp
+++ b/force-app/main/default/aura/CTHealthAdmin/CTHealthAdmin.cmp
@@ -1,15 +1,19 @@
-<aura:component implements="flexipage:availableForAllPageTypes" >
+<aura:component implements="force:appHostable">
+    <lightning:layout multipleRows="true">
+        <lightning:layoutItem size="12">
+            <!--Layout Item content goes here -->
+        
   <div class="slds-page-header slds-page-header_record-home">
     <div class="slds-page-header__row">
       <div class="slds-page-header__col-title">
         <div class="slds-media">
           <div class="slds-media__figure">
             <span class="slds-icon_container slds-icon-standard-opportunity">
-             <!-- <svg class="slds-icon slds-page-header" aria-hidden="true">
-                <use
-                  xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#opportunity"
-                ></use> 
-              </svg> -->
+              <lightning:icon
+                iconName="standard:queue"
+                alternativeText="Contact Tracing"
+                title="Contact Tracing"
+              />
             </span>
           </div>
           <div class="slds-media__body">
@@ -19,7 +23,7 @@
                   <span>Contact Tracing</span>
                   <span
                     class="slds-page-header__title slds-truncate"
-                    title="Acme - 1,200 Widgets"
+                    title="Person View"
                     >Person View</span
                   >
                 </h1>
@@ -31,10 +35,11 @@
       <div class="slds-page-header__col-actions">
         <div class="slds-page-header__controls">
           <div class="slds-page-header__control">
-           
-          </div>
-          <div class="slds-page-header__control">
+            <ul class="slds-button-group-list">
+              <li>
                 <button class="slds-button slds-button_neutral">Add New</button>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
@@ -43,51 +48,32 @@
       <div class="slds-page-header__col-details">
         <ul class="slds-page-header__detail-row">
           <li class="slds-page-header__detail-block">
-            <div class="slds-text-title slds-truncate" title="Field 1">
-              Green
-            </div>
-            <div
-              class="slds-truncate"
-              title="Number of green status."
-            >
-              5
-            </div>
+            <div class="" title="Green">Green</div>
+            <div class="" title="">5</div>
           </li>
           <li class="slds-page-header__detail-block">
-            <div class="slds-text-title slds-truncate" title="Field 2">
-              Yellow
-            </div>
-            <div
-              class="slds-truncate"
-              title="Number of yellow status."
-            >
-              5
-            </div>
+            <div class="" title="Yellow">Yellow</div>
+            <div class="" title="">5</div>
           </li>
           <li class="slds-page-header__detail-block">
-            <div class="slds-text-title slds-truncate" title="Field 3">
-              Orange
-            </div>
-            <div
-              class="slds-truncate"
-              title="Number of orange status."
-            >
-              5
-            </div>
+            <div class="" title="Orange">Orange</div>
+            <div class="" title="">5</div>
           </li>
           <li class="slds-page-header__detail-block">
-            <div class="slds-text-title slds-truncate" title="Field 4">
-              Red
-            </div>
-            <div
-              class="slds-truncate"
-              title="Number of red status."
-            >
-              5
-            </div>
-        </li>
+            <div class="" title="Red">Red</div>
+            <div class="" title="">5</div>
+          </li>
         </ul>
       </div>
     </div>
   </div>
+</lightning:layoutItem>
+<lightning:layoutItem size="12">
+    <lightning:tabset variant="vertical">
+        <lightning:tab label="Person View" id="person_view"> Person View </lightning:tab>
+        <lightning:tab label="Location View" id="location_view"> Location View </lightning:tab>
+      </lightning:tabset>
+   
+</lightning:layoutItem>
+</lightning:layout>
 </aura:component>
