--- a/force-app/main/default/aura/CTHealthAdmin/CTHealthAdmin.cmp
+++ b/force-app/main/default/aura/CTHealthAdmin/CTHealthAdmin.cmp
@@ -1,16 +1,20 @@
 <aura:component implements="force:appHostable">
+<aura:attribute name="scope" type="String" default="person" />
+<aura:attribute name="headerTitle" type="String" default="Person View" />
+
   <div class="container">
     <lightning:layout multipleRows="true">
       <lightning:layoutItem size="12">
         <!--use HealthHeader cmp inside this cmp -->
-        <c:CTHealthHeader />
+        <c:CTHealthHeader headerTitle="{!v.headerTitle}" scope="{!v.scope}"/>
       </lightning:layoutItem>
       <lightning:layoutItem size="12">
-        <lightning:tabset variant="vertical">
-          <lightning:tab label="Person View" id="person_view">
+        <!--onselect a tab will change header title-->
+        <lightning:tabset onselect="{!c.tabSelectHandler}" variant="vertical">
+          <lightning:tab label="Person View" id="person">
             Person View
           </lightning:tab>
-          <lightning:tab label="Location View" id="location_view">
+          <lightning:tab label="Location View" id="location">
             Location View
           </lightning:tab>
         </lightning:tabset>
