--- a/force-app/main/default/aura/CTHealthHeader/CTHealthHeader.cmp
+++ b/force-app/main/default/aura/CTHealthHeader/CTHealthHeader.cmp
@@ -1,4 +1,8 @@
 <aura:component>
+    <!--takes attributes from parent cmp as they are public attributes-->
+    <aura:attribute name="scope" type="String" default="person" />
+    <aura:attribute name="headerTitle" type="String" default="Person View" />
+
     <div class="slds-page-header slds-page-header_record-home">
         <div class="slds-page-header__row">
           <div class="slds-page-header__col-title">
@@ -21,8 +25,8 @@
                       <span>Contact Tracing</span>
                       <span
                         class="slds-page-header__title slds-truncate"
-                        title="Person View"
-                        >Person View</span
+                        title="{!v.headerTitle}"
+                        >{!v.headerTitle}</span
                       >
                     </h1>
                   </div>
@@ -35,7 +39,7 @@
               <div class="slds-page-header__control">
                 <ul class="slds-button-group-list">
                   <li>
-                    <button class="slds-button slds-button_neutral">
+                    <button class="slds-button slds-button_neutral" onclick="{!c.createRecord}">
                       Add New
                     </button>
                   </li>
